# cspawn

./: .gitignore  cspawn.cabal  stack.yaml
app/: Main.hs
examples/: config.yml
src/: Build.hs  Lib.hs
