name:                cspawn
version:             0.0.0.1
synopsis:            Controls spawning and destroying containers
description:         Please see README.md
homepage:            https://github.com/wayofthepie/cspawn.git
license:             BSD3
license-file:        LICENSE
author:              Stephen O'Brien
maintainer:          wayofthepie@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lib
    , Build
  build-depends:
    base >= 4.7 && < 5
    , aeson
    , attoparsec
    , bytestring
    , gitlib
    , gitlib-cmdline
    , nats-queue
    , shelly
    , text
    , yaml

  default-language:    Haskell2010

executable cspawn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base
    , cspawn

  default-language:    Haskell2010

test-suite cspawn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    base
    , cspawn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/cspawn.git
